Dcreator/src/objects/Employee__c.object
<CustomObject>
    <customHelpPage>EmployeeHelp</customHelpPage>
    <fields>
        <fullName>Age__c</fullName>
        <formula>YEAR( TODAY() )- YEAR( DateOfBirth__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Salary__c</fullName>
        <formula>IF( ISPICKVAL( Country__c , &quot;USA&quot;) , (12*Salary__c)+501, (12*Salary__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cities__c</fullName>
        <label>Cities</label>
        <picklist>
            <controllingField>Country__c</controllingField>
            <picklistValues>
                <fullName>Sacramento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San fransisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chicago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyderabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chennai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mumbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franfurt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lewtown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DOBMonth2__c</fullName>
        <label>DOBMonth2</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOBMonth__c</fullName>
        <formula>CASE(MONTH( DateOfBirth__c ),

 1, &quot;January&quot;,
 2, &quot;Feb&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DOBMonth</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateOfBirth__c</fullName>
        <label>DateOfBirth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EmpName__c</fullName>
        <formula>IF( ISPICKVAL( Gender__c ,&quot;Male&quot;) , &quot;Mr.&quot;+upper(Name), &quot;Mrs.&quot;+upper(Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EmpName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NetSalary__c</fullName>
        <formula>IF( OR(ISPICKVAL(VisaStatus__c ,&quot;F1&quot;),ISPICKVAL(VisaStatus__c ,&quot;CPT&quot;),ISPICKVAL(VisaStatus__c ,&quot;OPT&quot;)) ,

Annual_Salary__c*0.82, 
Annual_Salary__c*0.70)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NetSalary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NextBirthday__c</fullName>
        <label>NextBirthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quately_Salary__c</fullName>
        <label>Quaterly Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ResetNext__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ResetNext</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SixMonthsSalary__c</fullName>
        <label>SixMonthsSalary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SystemMsg__c</fullName>
        <label>SystemMsg</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TaxRate__c</fullName>
        <formula>IF( OR( ISPICKVAL( VisaStatus__c , &quot;F1&quot;),ISPICKVAL(VisaStatus__c , &quot;CPT&quot;),ISPICKVAL(VisaStatus__c , &quot;OPT&quot;)) ,




0.18,0.3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TaxRate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TypeOfCitizen__c</fullName>
        <formula>IF(Age__c&lt;=17, &quot;Teenager&quot;,
IF(AND(Age__c&gt;17,Age__c&lt;=20),&quot;Young Adult&quot;,
IF(AND(Age__c&gt;20,Age__c&lt;=39), &quot;Adult&quot;,
IF(AND(Age__c&gt;39,Age__c&lt;=49), &quot;Young Middle-Aged Adult&quot;,
IF(AND(Age__c&gt;49,Age__c&lt;=54), &quot;Middle-Aged Adult&quot;,
IF(AND(Age__c&gt;54,Age__c&lt;=64), &quot;Very Young Senior Citizen&quot;,
IF(AND(Age__c&gt;64,Age__c&lt;=74), &quot;Young Senior Citizen&quot;,
IF(AND(Age__c&gt;74,Age__c&lt;=84), &quot;Senior Citizen&quot;,&quot;Old Senior Citizen&quot;))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TypeOfCitizen</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisaStatus__c</fullName>
        <label>VisaStatus</label>
        <picklist>
            <picklistValues>
                <fullName>F1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H1B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <recordTypes>
        <fullName>Level1_EMP</fullName>
        <active>true</active>
        <label>Level1_EMP</label>
    </recordTypes>
    <recordTypes>
        <fullName>NonUsa</fullName>
        <active>true</active>
        <label>NonUsa</label>
    </recordTypes>
    <recordTypes>
        <fullName>USA</fullName>
        <active>true</active>
        <label>USA</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DOBValidation</fullName>
        <active>false</active>
        <errorConditionFormula>ISNULL( DateOfBirth__c )</errorConditionFormula>
        <errorDisplayField>DateOfBirth__c</errorDisplayField>
        <errorMessage>Please enter date of birth</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DOBValidation1</fullName>
        <active>false</active>
        <errorConditionFormula>DateOfBirth__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>DateOfBirth__c</errorDisplayField>
        <errorMessage>Please enter correct DOB</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DOBValidation2</fullName>
        <active>false</active>
        <errorConditionFormula>OR(Age__c &lt;20,Age__c &gt;60)</errorConditionFormula>
        <errorDisplayField>DateOfBirth__c</errorDisplayField>
        <errorMessage>Please enter valid DOB</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GenderEmpty</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Gender__c ,&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Gender__c</errorDisplayField>
        <errorMessage>Please select the gender</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SalaryValidation</fullName>
        <active>true</active>
        <errorConditionFormula>Salary__c &lt;0</errorConditionFormula>
        <errorDisplayField>Salary__c</errorDisplayField>
        <errorMessage>Please enter salary greater than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VisaStatus</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( VisaStatus__c, &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>VisaStatus__c</errorDisplayField>
        <errorMessage>Please select the visa status</errorMessage>
    </validationRules>
</CustomObject>